Wed Oct 15 20:22:31 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/soap/netHttpClient.rb: use URI::HTTP#request_uri instead of
	  instance_eval('path_query').  [ruby-list:38575]

Wed Oct 15 17:24:45 2003  URABE Shyouhei  <root@mput.dip.jp>

	* lib/cgi.rb (CGI::Cookie): tiny typo fix.

Wed Oct 15 15:00:54 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_run): just return FAILURE instead of parse error
	  count.  [ruby-list:38569]

Wed Oct 15 13:17:02 2003  NAKAMURA Usaku <usa@ruby-lang.org>

	* ext/digest/digest.c (rb_digest_base_alloc): need to initialize
	  buffer. [ruby-dev:21622]

Wed Oct 15 11:23:05 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c (w_object): dump extended modules as well.

	* marshal.c (r_object0): TYPE_USRMARSHAL should restore extended
	  modules before invoking marshal_load.  these two fixes are done
	  by Masatoshi Seki <m_seki@mva.biglobe.ne.jp>.

Wed Oct 15 09:30:34 2003  NAKAMURA Usaku <usa@ruby-lang.org>

	* ext/enumerator/enumerator.c (enumerator_each): avoid VC++ warning.

	* ext/syck/syck.h: include stdio.h for definition of FILE.

Wed Oct 15 08:09:07 2003  why the lucky stiff  <ruby-cvs@whytheluckystiff.net>

	* ext/syck/bytecode.c: Checkin of YAML bytecode support.

	* ext/syck/gram.c: Ditto.

	* ext/syck/syck.c: Ditto.

	* ext/syck/token.c: Ditto.

	* ext/syck/handler.c: Ditto.

	* ext/syck/handler.c: Now using 'tag' rather than 'taguri' in type URIs.

	* ext/syck/rubyext.c: Ditto (on both counts).

Wed Oct 15 05:05:53 2003  Akinori MUSHA  <knu@iDaemons.org>

	* lib/generator.rb: A new library which converts an internal
	  iterator to an external iterator.

	* lib/abbrev.rb: A new library which creates an abbreviation table
	  from a list.

Wed Oct 15 04:31:51 2003  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/sample/demos-en/entry3.rb, ext/tk/sample/demos-jp/entry3.rb :
	  new demo-scripts

	* ext/tk/sample/demos-en/widget, ext/tk/sample/demos-jp/widget :
	  add entries for 'entry3.rb'
